# token-meter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/token_meter/: __init__.py  alerts.py  anomaly.py  budget.py  cli.py  config.py  core.py  display.py  models.py  pricing.py
src/token_meter/patchers/: __init__.py  anthropic.py  base.py  google.py  openai.py
src/token_meter/storage/: __init__.py  base.py  sqlite.py
tests/: test_alerts.py  test_anomaly.py  test_budget.py  test_cli.py  test_core.py  test_models.py  test_patchers.py  test_pricing.py  test_storage.py  test_storage_queries.py
